# dgctl

./: README.md  dgctl.py  pyproject.toml  utils.py
.github/workflows/: release-linux.yaml  release-macos.yaml  release.yaml
dgctl-npm/: install.js  package.json
scripts/: build-linux.sh  build-macos.sh
src/dgctl/: aws.py  commands.py  dgctl.py  utils.py
tests/: test_utils.py
