[tool.poetry]
name = "dgctl"
version = "0.1.3"
description = "digger.dev client"
authors = ["Mohammed Habib <mo@digger.dev>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
flake8 = "*"
pytest = "*"
pytest-django = "*"
pytest-mock = "*"
pytest-cov = "*"
black = "*"
parameterized = "*"
pyfakefs = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dgctl = "dgctl.dgctl:cli"

[project]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click >= 8.1.3",
]

[project.urls]
"Homepage" = "https://github.com/diggerhq/dgctl"
"Bug Tracker" = "https://github.com/diggerhq/dgctl/issues"
